[tool.poetry]
name = "cryptopals"
version = "0.1.0"
description = ""
authors = ["Martyn <1931150@brunel.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pycrypto = "^2.6"

[tool.pytest.ini_options]
minversion = "6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
